--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="submit" name="submit" value="Login with Facebook">
               
             </form>
-            <p>Note : Prize will be sent to the contact number that you have inserted.</p>
+            <p>Note : Reward will be sent to the contact number that you have inserted.</p>
         
         <div class="footer">
             <h2>&copy; Ocean Games 2021</h2>
